--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       </div>
     </div>
     <!-- cart END -->
+    <!-- contentful -->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <!-- app - js -->
     <script src="app.js"></script>
   </body>
 </html>
